# esp-cube

./: Cargo.toml  build.rs  cfg.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  Dockerfile-  debian-qinghua.list  devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main copy.rs-  main.rs
src/device/: i2c.rs  imu.rs  mod.rs  touchpad.rs
src/network/: wifi.rs
src/utils/: rgb.rs
