[package]
name = "esp-cube"
version = "0.1.0"
authors = ["MorningTZH <morningtzh@yeah.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.83" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }

anyhow       = "=1.0.75"
embedded-svc = "=0.26.4"
shtcx        = "=0.11.0"
toml-cfg     = "=0.1.3"
heapless = "0.8"
rgb         = "0.8.29"

display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
esp-idf-hal = "0.43.1"
embedded-graphics = "0.8.1"
nalgebra = "0.31.4"
libm = "0.2.8"

ili9341 = "0.6.0"
mpu6886 = "0.1.0"
ft6x36 = { version = "^0.4", features = [ "event_process" ] }

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "=0.1.3"
